--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -1,11 +1,14 @@
 {% extends "main/base.html" %}
 {% block head%}
-
+<link rel="stylesheet" href="{%  static 'styles/home.css'%}">
 {% endblock %}
 
 {% block content %}
 
+<div>
 <h2>Home</h2>
+<h4></h4>
+</div>
 
 {% if user.is_authenticated %}
 <label color="red">Logged in</label>
