--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -1,4 +1,5 @@
 {% extends "main/base.html" %}
+{% load static %}
 {% block head%}
 <link rel="stylesheet" href="{%  static 'styles/home.css'%}">
 {% endblock %}
