--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -1,7 +1,7 @@
 {% extends "main/base.html" %}
 {% load static %}
 {% block head%}
-<link rel="stylesheet" href="{%  static 'styles/home.css'%}">
+<link type="text/css" rel="stylesheet" href="{%  static 'styles/home.css'%}">
 {% endblock %}
 
 {% block content %}
