--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -1,4 +1,6 @@
 body {
-  background: url("/static/images/home_background.png");
-  background-repeat: no-repeat;
+    background: url("/static/images/home_background.png");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
+  
