--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -2,5 +2,6 @@ body {
     background: url("/static/images/home_background.png");
     background-repeat: no-repeat;
     background-size: cover;
+    background-size: auto;
 }
   
