--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -3,4 +3,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 }
-  
+#headerdiv {
+    position: fixed;
+    text-align: center;
+}
