--- a/main/templates/main/airport.html
+++ b/main/templates/main/airport.html
@@ -19,7 +19,26 @@
 
 <ul id="objects-list">
 {% for object in aircrafts %}
-    <li>{{ object.Callsign }}</li>
+    <div style="padding-left: 3px; padding-right: 8px;width: 250px; line-height: 1.6;   border-style: solid; border-color: green; green; background-color: lightgrey;">
+    <input style="font-size: 17px; 10px;font-weight: bold;; width: 80px; height: 18px; background-color: #eaeaea; border: 0px;" type="text" placeholder="Callsign" value={{object.callsign}} />
+    <button style="background-color: green; color: white; margin-right:-8px; float: right; width: 70x; height: 20px; border: 0px;">Inbound</button>
+  <br>
+  <div style="line-height: 2;">  
+    <input style="width: 30px; height: 18px; background-color: #eaeaea; border: 0px;" type="text" placeholder="Dep">
+    <input style="width: 50px; height: 18px; background-color: #eaeaea; border: 0px;" type="text" placeholder="Aircraft">
+    <input style="width: 50px; height: 18px; background-color: #eaeaea; border: 0px;" type="text" placeholder="Altitude">
+    <input style="width: 30px; height: 18px; background-color: #eaeaea; border: 0px;" type="text" placeholder="Gate">
+    <br>
+    <input style="width: 30px; height: 18px; background-color: #eaeaea; border: 0px;" type="text" placeholder="Arr">
+    <input style="width: 50px; height: 18px; background-color: #eaeaea; border: 0px;" type="text" placeholder="Runway">
+    <input style="width: 50px; height: 18px; background-color: #eaeaea; border: 0px;" type="text" placeholder="Squawk">
+    <input style="width: 30px; height: 18px; background-color: #eaeaea; border: 0px;" type="text" placeholder="Info">
+    <br>
+    <input style="width: 100%; height: 18px; background-color: #eaeaea; border: 0px;" type="text" placeholder="Taxi instructions">
+    <br>
+    <input style="width: 100%; height: 18px; background-color: #eaeaea; border: 0px;" type="text" placeholder="Additional Infos">
+  </div>
+  </div>
 {% endfor %}
 </ul>
 <label class="output">Test</label>
