--- a/static/styles/airport.css
+++ b/static/styles/airport.css
@@ -7,3 +7,13 @@
   border-color: green;
   background-color: lightgrey;
 }
+
+.button-inbound {
+  background-color: green; 
+  color: white; 
+  margin-right:-8px; 
+  float: right; 
+  width: 70x; 
+  height: 20px; 
+  border: 0px;
+}
