--- a/main/templates/main/airport.html
+++ b/main/templates/main/airport.html
@@ -1,7 +1,7 @@
 {% extends "main/base.html" %}
 {% load static %}
-{% block head %}
-    <link ref="stylesheet" type="text/css" href="{% static 'styles/airport.css' %}">
+{% block head%}
+    <link type="text/css" rel="stylesheet" href="{%  static 'styles/airport.css'%}">
 {% endblock %}
 {% block content %}
 
