--- a/main/templates/main/airport.html
+++ b/main/templates/main/airport.html
@@ -23,7 +23,7 @@
 <ul id="objects-list">
 {% for object in aircrafts %}
 <li>
-    <div class="aircraft">
+    <div class="aircraft-inbound">
     <input class="aircraft-callsign" type="text" placeholder="Callsign" value={{object.Callsign}} />
     <button class="button-inbound">Inbound</button>
   <br>
