--- a/staticfiles/styles/airport.css
+++ b/staticfiles/styles/airport.css
@@ -71,3 +71,13 @@ li:first-child {
   height: 20px; 
   border: 0px;
 }
+
+.button-outbound {
+  background-color: red; 
+  color: white; 
+  margin-right:-8px; 
+  float: right; 
+  width: 70x; 
+  height: 20px; 
+  border: 0px;
+}
