--- a/static/styles/airport.css
+++ b/static/styles/airport.css
@@ -11,6 +11,7 @@
 .aircraft-outbound {
   padding-left: 3px; 
   padding-right: 8px;
+  float: right;
   width: 250px; 
   line-height: 1.6;   
   border-style: solid; 
