--- a/main/templates/main/airport.html
+++ b/main/templates/main/airport.html
@@ -12,11 +12,11 @@
             <img width="706" height="100%" src="{% static chart %}">
         {% endfor %}
     </div>
-    <div class="airway-charts">
+    <!--<div class="airway-charts">
         {% for chart in Airway_Charts %}
             <img width="50%" height="100%" src="{% static chart %}">
-        {% endfor %}
-    </div>
+        {% endfor %} 
+    </div>-->
 </div>
 <ul id="objects-list">
 {% for object in aircrafts %}
